sass/scrollbar.scss
@import "variables";

.scrollbar-container {
    position: absolute;
    width: $scrollbar-width;
    top: 0px;
    right: 0px;
    height: 100%;
    @include translate3d(0, 0, 0);
}

.scrollbar-rail, .scrollbar-knob {
    position: absolute;
    width: $scrollbar-width;
    top: 0px;
    left: 0px;
    @include border-top-radius(7px);
    @include border-bottom-radius(7px);
    transition: filter 0.3s ease-in;
    transition: -webkit-filter 0.3s ease-in;
}

.scrollbar-container:hover .scrollbar-rail,
.scrollbar-container:hover .scrollbar-knob {
    @include css-filter(opacity(100%));
}

.scrollbar-rail {
    height: 100%;
    background-color: rgba(0, 0, 0, 0.15);
    @include css-filter(opacity(0%));
}

.scrollbar-knob {
    background-color: rgba(0, 0, 0, 0.35);
    @include css-filter(opacity(0%));
    @include transform-origin(top left 0);
    @include translate3d(0, 0, 0);
}

.scrollbar-container.scrolling .scrollbar-knob,
.scrollbar-scrollarea:hover .scrollbar-container .scrollbar-knob {
    @include css-filter(opacity(100%));
}

.ps-container {
    -ms-touch-action: none;
    overflow: hidden !important
}
.ps-container.ps-active-x>.ps-scrollbar-x-rail,
.ps-container.ps-active-y>.ps-scrollbar-y-rail {
    display: block
}
.ps-container.ps-in-scrolling {
    pointer-events: none
}

.ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y,
.ps-container>.ps-scrollbar-x-rail>.ps-scrollbar-x {
    position: absolute;
    background-color: #CCE6FF;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -ms-border-radius: 4px;
    border-radius: 4px;
    -webkit-transition: background-color 0.2s linear;
    -moz-transition: background-color 0.2s linear;
    -o-transition: background-color 0.2s linear;
    transition: background-color 0.2s linear;
}

.ps-container>.ps-scrollbar-x-rail>.ps-scrollbar-x {
    bottom: 0;
}

.ps-container>.ps-scrollbar-y-rail>.ps-scrollbar-y {
    right: 0;
}

.ps-container>.ps-scrollbar-x-rail,
.ps-container>.ps-scrollbar-y-rail {
    display: none;
    position: absolute;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    -ms-border-radius: 4px;
    border-radius: 4px;
    opacity: 0.6;
    -webkit-transition: background-color 0.2s linear, opacity 0.2s linear;
    -moz-transition: background-color 0.2s linear, opacity 0.2s linear;
    -o-transition: background-color 0.2s linear, opacity 0.2s linear;
    transition: background-color 0.2s linear, opacity 0.2s linear;
}

.ps-container>.ps-scrollbar-x-rail {
    bottom: 0px;
}

.ps-container>.ps-scrollbar-y-rail {
    right: 0px;
}

.ps-container:hover.ps-in-scrolling {
    pointer-events: none
}

.ps-container.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail,
.ps-container.ps-in-scrolling.ps-y>.ps-scrollbar-y-rail {
    background-color: #eee;
    opacity: 0.9
}

.ps-container:hover.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail,
.ps-container:hover.ps-in-scrolling.ps-y>.ps-scrollbar-y-rail {
    background-color: #eee;
    opacity: 0.9
}

.ps-container.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail>.ps-scrollbar-x,
.ps-container.ps-in-scrolling.ps-y>.ps-scrollbar-y-rail>.ps-scrollbar-y {
    background-color: #CCE6FF;
}

.ps-container:hover>.ps-scrollbar-x-rail:hover>.ps-scrollbar-x,
.ps-container:hover>.ps-scrollbar-y-rail:hover>.ps-scrollbar-y {
    background-color: #CCE6FF;
}

.ps-container:hover.ps-in-scrolling.ps-x>.ps-scrollbar-x-rail>.ps-scrollbar-x,
.ps-container:hover.ps-in-scrolling.ps-y>.ps-scrollbar-y-rail>.ps-scrollbar-y {
    background-color: #CCE6FF;
}

.ps-container:hover>.ps-scrollbar-x-rail,
.ps-container:hover>.ps-scrollbar-y-rail {
    opacity: 0.9
}

.ps-container>.ps-scrollbar-y-rail,
.ps-container>.ps-scrollbar-x-rail {
    background-color: #eee;
    opacity: 0.6
}

